--- a/questions-docente/domande.html
+++ b/questions-docente/domande.html
@@ -77,7 +77,7 @@
       <div class="divider"></div>
 
       <!-- questions - START -->
-      <div class="question-wrapper" id="questino-1">
+      <div class="question-wrapper" id="questino-1" data-year="1">
         <div>
           <div>
             <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
@@ -89,7 +89,9 @@
             <!-- Options -->
             <ul>
               <li>
-                <a href="#"> Modifica<i class="material-icons">create</i> </a>
+                <a href="#question-modal">
+                  Modifica<i class="material-icons">create</i>
+                </a>
               </li>
               <li>
                 <a href="#question-modal-delete">
@@ -99,11 +101,7 @@
             </ul>
           </div>
         </div>
-        <p>
-          Sulla base di quanto studiato in classe, spiega il concetto di popolo
-          in ottica romantica, facendo un paragone tra il Romanticismo e le
-          visioni delle correnti fondamentale del Primo Ottocento.
-        </p>
+        <p>Sulla base di quanto studiato in classe, spiega il concetto di popolo in ottica romantica, facendo un paragone tra il Romanticismo e le visioni delle correnti fondamentale del Primo Ottocento.</p>
         <div>
           <h5>
             <span class="level difficult"></span>
@@ -113,7 +111,7 @@
           <h5><strong>Durata:</strong> 15min</h5>
         </div>
       </div>
-      <div class="question-wrapper" id="questino-2">
+      <div class="question-wrapper" id="questino-2" data-year="1">
         <div>
           <div>
             <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
@@ -125,7 +123,9 @@
             <!-- Options -->
             <ul>
               <li>
-                <a href="#"> Modifica<i class="material-icons">create</i> </a>
+                <a href="#question-modal">
+                  Modifica<i class="material-icons">create</i>
+                </a>
               </li>
               <li>
                 <a href="#question-modal-delete">
@@ -135,11 +135,7 @@
             </ul>
           </div>
         </div>
-        <p>
-          Sulla base di quanto studiato in classe, spiega il concetto di popolo
-          in ottica romantica, facendo un paragone tra il Romanticismo e le
-          visioni delle correnti fondamentale del Primo Ottocento.
-        </p>
+        <p>Sulla base di quanto studiato in classe, spiega il concetto di popolo in ottica romantica, facendo un paragone tra il Romanticismo e le visioni delle correnti fondamentale del Primo Ottocento.</p>
         <div>
           <h5>
             <span class="level medium"></span>
@@ -149,7 +145,7 @@
           <h5><strong>Durata:</strong> 15min</h5>
         </div>
       </div>
-      <div class="question-wrapper" id="questino-3">
+      <div class="question-wrapper" id="questino-3" data-year="1">
         <div>
           <div>
             <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
@@ -161,7 +157,9 @@
             <!-- Options -->
             <ul>
               <li>
-                <a href="#"> Modifica<i class="material-icons">create</i> </a>
+                <a href="#question-modal">
+                  Modifica<i class="material-icons">create</i>
+                </a>
               </li>
               <li>
                 <a href="#question-modal-delete">
@@ -171,11 +169,7 @@
             </ul>
           </div>
         </div>
-        <p>
-          Sulla base di quanto studiato in classe, spiega il concetto di popolo
-          in ottica romantica, facendo un paragone tra il Romanticismo e le
-          visioni delle correnti fondamentale del Primo Ottocento.
-        </p>
+        <p>Sulla base di quanto studiato in classe, spiega il concetto di popolo in ottica romantica, facendo un paragone tra il Romanticismo e le visioni delle correnti fondamentale del Primo Ottocento.</p>
         <div>
           <h5>
             <span class="level easy"></span>
@@ -202,7 +196,7 @@
                 <option value="2">2 ITI</option>
                 <option value="3">3 ITI</option>
               </select>
-              <select name="difficulty" id="difficulty">
+              <select name="level" id="level">
                 <option value="placeholder">Difficoltà</option>
                 <option value="1">Facile</option>
                 <option value="2">Medio</option>
@@ -210,26 +204,26 @@
               </select>
               <div class="input-group">
                 <input
-                  placeholder="durata"
+                  placeholder="duration"
                   type="number"
                   class="input-field"
-                  name="durata"
-                  id="durata"
+                  name="duration"
+                  id="duration"
                   required
                 />
-                <label for="durata" class="input-label">Durata (min)</label>
+                <label for="duration" class="input-label">Durata (min)</label>
               </div>
             </div>
             <div class="right">
               <select name="unit" id="unit">
                 <option value="placeholder">Unità</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
+                <option value="1">Unita 1</option>
+                <option value="2">Unita 2</option>
+                <option value="3">Unita 3</option>
               </select>
               <select name="argument" id="argument">
                 <option value="placeholder">Argomento</option>
-                <option value="1">Primo Ottocento</option>
+                <option value="1">Romanticismo</option>
                 <option value="2">Secondo Ottocento</option>
                 <option value="3">Primo Novecento</option>
               </select>
@@ -238,9 +232,7 @@
                 <option value="1">Romanticismo</option>
                 <option value="2">Neoclassicismo</option>
                 <option value="3">Giovanni Verga</option>
-                <option value="4">
-                  Verismo Italiano e Naturalismo Francese
-                </option>
+                <option value="4">caratteristiche fondamentali</option>
                 <option value="5">Decadentismo</option>
               </select>
             </div>
@@ -248,17 +240,32 @@
           <div class="divider"></div>
           <div class="input-group">
             <textarea
-              placeholder="question"
+              placeholder="text"
               type="text"
               class="input-field"
-              name="question"
-              id="question"
+              name="text"
+              id="text"
               cols="30"
               rows="10"
             ></textarea>
-            <label for="question" class="input-label">Domanda</label>
+            <label for="text" class="input-label">Domanda</label>
           </div>
           <input type="submit" value="Aggiungi" class="btn" />
+        </form>
+        <a href="#" class="modal-close-btn">&times;</a>
+      </div>
+    </div>
+    <!-- question-modal - END -->
+
+    <!-- question-modal - START -->
+    <div id="question-modal-delete" class="modal-wrapper">
+      <a href="#" class="modal-background"></a>
+      <div class="modal">
+        <form action="post">
+          <input type="text" name="id" id="id" value="" style="display: none;">
+          <h4>Sei sicuro di voler rimuovere questa domanda?</h4>
+          <p class="m-vertical"></p>
+          <input type="submit" value="Conferma" class="btn">
         </form>
         <a href="#" class="modal-close-btn">&times;</a>
       </div>
